--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="#" id="home">Home</a></li>
           <li><a href="#mainly" id="about">About</a></li>
           <li><a href="#" id="contact">Contact</a></li>
-          <li><a href="#" id="github">Github</a></li>
+          <li><a href="#" target="_blank" id="github">Github</a></li>
         </ul>
       </div>
     </nav>
@@ -44,9 +44,9 @@
           </div>
 
           <div class="align">
-            <font size="+3" id="insta"><i class="ri-instagram-fill"></i></font>
-            <font size="+3" id="discord"><i class="ri-discord-fill"></i></font>
-            <font size="+1">ryangabryel2005@gmail.com</font>
+            <div  id="icon"><i class="ri-instagram-fill"></i></div>
+            <div  id="icon"><i class="ri-discord-fill"></i></div>
+            <div id="email">ryangabryel2005@gmail.com</div>
           </div>
 
           <section class="carousel">
@@ -90,6 +90,9 @@
           </artlicle>
       </div>
     </section>
+    <footer>
+      &copy Ryan Gabryel
+    </footer>
     
 
     <script src="main.js"></script>
